# streetwise-app

./: .gitignore  .travis.yml  Procfile  README.md  app.json  app.py  import.py  load.py  manage.py  package.json  pyproject.toml  requirements.txt  streetwise.py  tox.ini  vue.config.js
app/: __init__.py  client.py  config.py  models.py
app/admin/: __init__.py  importer.py
app/api/: __init__.py  images.py  models.py  resources.py  security.py  votes.py
data/: README  ch_data_test.csv  get_campaign_data.sh  get_data.sh  get_local_votes.sh  get_votes.sh  set_acls.sh  test.csv
migrations/versions/: 2b5713cd79f6_.py  2de8064ba3f5_.py  46ba6c8d1266_.py  4ee1be843d6e_.py  8ce4e9d93356_.py  b275c54a63ec_.py  c7efbd46a04d_.py
profiling/: readme.md  requests  vote.json
public/: index.html  manifest.json
src/: App.vue  backend.js  errorLogger.js  main.js  router.js  store.js
src/assets/: streetwise_Square.xcf
src/components/: AppHeader.vue  CrowdSourceGoals.vue  ImageContainer.vue  ImagePair.vue  ImageVote.vue  IssueBox.vue  ProgressGoals.vue  SocialIcons.vue  StartTour.vue
src/texts/: campaign-1.yaml  campaign-2.yaml  campaigns.yaml
src/views/: Complete.vue  Finish.vue  Home.vue  Start.vue  Tour.vue  Voting.vue  Wiser.vue
streetwise/: __init__.py  client.py  config.py  models.py
streetwise/admin/: importer.py
streetwise/api/: __init__.py  campaigns.py  images.py  results.py  security.py  util.py  votes.py
streetwise/api/helper/: image_display_count.py  (+1 more)
tests/: __init__.py  test_api.py  test_client.py  test_images.py  test_session.py  test_voting.py
(+3 files in other folders)
