[tool.poetry]
name = "streetwise-app"
version = "0.1.0"
description = ""
authors = ["Oleg Lavrovsky <oleg@datalets.ch>"]

[tool.poetry.dependencies]
python = ">=3.6"
gunicorn = "*"
flask-restplus = "*"
python-dotenv = "*"
flask = "*"
flask_limiter = "^1.2.1"
flask_sqlalchemy = "^2.4.1"
flask_migrate = "^2.5.3"

[tool.poetry.dev-dependencies]
pytest = "5.3.5"
bumpversion = "*"
pytest-sugar = "*"
pytest-cov = "*"
# Werkzeug = "0.16.1"
